# blue-test

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.quail/: cmake.txt  configs.txt  cycle.txt  metric.txt  quail.txt  shared.txt  unit.txt
.quail/cmd/: build.bat  exe_with_res.ps1
.quail/cmd/cmake/: clear.ps1  refresh.bat
project/bluecycle/: CMakeLists.txt
project/bluecycle/src/: main.cpp
project/bluemetric/: CMakeLists.txt
project/bluemetric/src/: main.cpp
project/blueunit/: CMakeLists.txt
project/blueunit/src/: basetypes.cpp  bitwise.cpp  cmpxchg16b.cpp  main.cpp  wave.cpp
